--- a/pre/css/main.scss
+++ b/pre/css/main.scss
@@ -111,6 +111,8 @@ button {
             display: flex;
             flex-wrap: wrap;
 
+            width: calc(100% - 141px);
+
             &--item {
                 position: relative;
                 margin-top: 8px;
@@ -503,5 +505,19 @@ button {
 
     .b-rrss {
         width: 80%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .b-chart {
+        .chart {
+            &__logics {
+                flex-direction: column;
+            }
+
+            &__legend {
+                width: 100%;
+            }
+        }
     }
 }
