Cambios en botones

--- a/pre/css/main.scss
+++ b/pre/css/main.scss
@@ -500,17 +500,7 @@ button {
             &__options {
                 justify-content: center;
             }
-        }
-    }
 
-    .b-rrss {
-        width: 80%;
-    }
-}
-
-@media screen and (max-width: 375px) {
-    .b-chart {
-        .chart {
             &__logics {
                 flex-direction: column;
             }
@@ -519,5 +509,15 @@ button {
                 width: 100%;
             }
         }
+    }
+
+    .b-rrss {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    button {
+        font-size: 0.8em;
     }
 }
